# MediPOS

./: .gitignore
.github/workflows/: backend.yml  mobile.yml  web.yml
.maestro/: config.yaml
Medical POS Backend/: .env.example  jest.config.js  package-lock.json  package.json  provision.js  schema.sql  test-db.js
Medical POS Backend/src/: app.ts  db.ts  local-db.ts  server.ts
Medical POS ReactNative/: .env.example  app.config.ts  eas.json  package-lock.json  package.json
Medical POS ReactNative/app/: _layout.tsx  index.tsx
Medical POS ReactNative/components/: BarcodeScanner.tsx
Medical POS ReactNative/constants/: theme.ts
Medical POS ReactNative/hooks/: useAlerts.ts  useClinic.ts  useDebounce.ts  useOfflineSync.ts  usePagination.ts  useRole.ts  useSession.ts
Medical POS ReactNative/lib/: api.ts  notifications.ts  notifications.web.ts  offlineDb.ts  offlineDb.web.ts  supabase.ts  toast.ts
Medical POS Reactjs/: build_errors.txt  implementation_plan.md  index.html  package-lock.json  package.json  schema.sql  tailwind.config.js  typecheck_output.txt  vite.config.ts
Medical POS Reactjs/src-tauri/: Cargo.toml  tauri.conf.json
Medical POS Reactjs/src-tauri/capabilities/: default.json
Medical POS Reactjs/src-tauri/icons/: icon.icns
Medical POS Reactjs/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: DISASTER_RECOVERY.md  GO_LIVE_RUNBOOK.md  PERFORMANCE_AND_SCALE.md  QA_CHECKLIST.md
load-tests/: billing-load.js  concurrent-billing.js
medical-pos-mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
(+348 files in other folders)
