[package]
name = "medpos_pro"
version = "0.1.0"
description = "MedPOS Pro desktop application"
authors = ["NexSyrus"]
edition = "2021"

[lib]
name = "medpos_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "s"
